[project]
name = "mysol-backend"
version = "0.1.0"
description = "FastAPI Backend"
authors = [
    {name = "SooinPark1019"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
    "mysql-connector-python (>=9.2.0,<10.0.0)",
    "starlette (>=0.45.3,<0.46.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "boto3 (==1.36.23)",
    "aioboto3 (>=14.0.0,<15.0.0)",
    "botocore (==1.36.23)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "mysol" }
]
